# simpleui

./: .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  SPEC.md  Updates.md  ZACK_NOTES.md  ZACK_notes.md  before.txt  browser-died.bash  browser-died.ps1  docker-compose.yaml  package-lock.json  run-dev-env.bash  zack_notes.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: dockerimage.yml  frontend_tests.yml
addons/: uimanager.html
backend-sim/: CMakeLists.txt  SimBackendServer.properties  SimState.cpp  SimState.h  SimState.xml  XmlReader.h  ZmqWrapper.cpp  ZmqWrapper.h  logger.cpp  logger.h  props.cpp  props.h
base_app/: .gitignore  README.md  angular.json  build-all-derivatives.sh  build-app-for-dev.sh  build-json-normalizer.sh  build-simpleui-server.bash  build-sui-mock.sh  build.bash  gitrevision.sh  is_dist_stale.bash  main.yml  make-version-txt.bash  make-version-txt.sh  package-lock.json  package.json  poc.md  post-build-step.bash  post-build-step.sh  setup-bms-derivative.sh  tsconfig.json  updateWorking.sh  webpack.config.js
deploy/: Readme.md  apache2.conf  build-base-web-packages.sh  build-derived-app-bundle.yml  common-vars.yml  file-to-compare.txt  install-derived-app-bundle.yml  install-legacy-module-derivative-app.yml  instructions.txt  integrate_params_app.yml  is_dist_stale.bash  merge-derived-app.sh  ng-simple-ui-web-setup.yml  release-notes-v00-01.txt  update-nodejs.yml  update_site.sh
deploy_docker/: 000-default.conf  README.md  apache2.conf  merge_app.sh  php.ini  run.sh
derivative-by-vendor/vionx-mock-cxx-backend-servers/BMSServer/: CMakeLists.txt  SimBackendServer.properties  SimState.cpp  SimState.h  SimState.xml  XmlReader.cpp  XmlReader.h  ZmqWrapper.cpp  ZmqWrapper.h  config.h  logger.h  main.cpp  props.h
derivative-by-vendor/vionx-proprietary/BMSServer/sample-backend/lib/: CMakeLists.txt  zmqdemo.cpp
derivative-by-vendor/vionx-proprietary/BMSServer/sample-backend/test/: CMakeLists.txt  tests.cpp
develop/: README.md  docker-compose.yml
develop_docker/: .dockerignore  Dockerfile  README.md  development-tasks.md  docker-compose.yaml  docker-compose.yml  install-prereqs-and-start-server.bash  install-script-debug-simpleui-server.bash  install-script.bash
develop_docker.0/: Dockerfile  README.md
docker_zmq/: Dockerfile  backend.py
docker_zmq_backend/: Dockerfile  backend.py
simpleui-server/: .gitignore  build-simpleui-server.bash  jest.config.js  make-version-txt.bash  package-lock.json  package.json  post-build-step.bash  post-build-step.sh
(+1466 files in other folders)
